--- a/website/home.html
+++ b/website/home.html
@@ -111,10 +111,12 @@
 				<label for="address">Address:</label>
 				<input type="text" id="address" name="address" required><br><br>
 				<label for="payment">Payment method:</label>
-				<select id="payment" name="payment">
-					<option value="credit">Credit card</option>
-					<option value="debit">Debit card</option>
-					<option value="paypal">PayPal</option>
+<div class="payment-buttons">
+  <button type="button" class="credit-button">Credit card</button>
+  <button type="button" class="debit-button">Debit card</button>
+  <button type="button" class="paypal-button">PayPal</button>
+</div>
+<input type="hidden" id="payment" name="payment">
 				</select><br><br>
 				<input type="submit" value="Place Order">
 			</form>
